ajout authentification avec geoplateforme doc de l'api
